--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "homepage": "https://github.com/softwareventures/csv",
   "devDependencies": {
+    "@softwareventures/tslint-rules": "^0.5.2",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.6"
   }
 }
