--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "url": "https://github.com/softwareventures/csv/issues"
   },
   "homepage": "https://github.com/softwareventures/csv",
+  "scripts": {
+    "prepare": "tslint --project . && tsc"
+  },
   "devDependencies": {
     "@softwareventures/tslint-rules": "^0.5.2",
     "tslint": "^5.11.0",
