--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@softwareventures/tslint-rules": "^0.5.2",
     "tslint": "^5.11.0",
     "typescript": "^3.1.6"
+  },
+  "dependencies": {
+    "@softwareventures/table": "^0.1.0"
   }
 }
