--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "@softwareventures/array": "^0.1.1",
     "@softwareventures/table": "^0.1.0",
     "tslib": "^1.9.3"
   }
