Correct repository URL.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@softwareventures/csv",
   "version": "0.1.0",
   "description": "Parser and serializer for CSV and related formats",
-  "repository": "github:/softwareventures/csv",
+  "repository": "github:softwareventures/csv",
   "keywords": [
     "csv",
     "tsv",
