Replace regex escape function with escape-string-regexp.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@softwareventures/array": "^0.1.1",
     "@softwareventures/table": "^0.1.1",
+    "@types/escape-string-regexp": "^1.0.0",
+    "escape-string-regexp": "^1.0.5",
     "tslib": "^1.9.3"
   }
 }
