--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "homepage": "https://github.com/softwareventures/csv",
   "scripts": {
-    "prepare": "tslint --project . && tsc"
+    "prepare": "tslint --project . && tsc",
+    "test": "echo No tests yet"
   },
   "sideEffects": false,
   "devDependencies": {
