--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "lib": ["es5"],
-    "strict": true,
-    "declaration": true,
-    "downlevelIteration": true,
-    "forceConsistentCasingInFileNames": true,
-    "importHelpers": true,
-    "moduleResolution": "node"
-  }
+  "extends": "@softwareventures/tsconfig"
 }
