--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@softwareventures/tsconfig": "1.0.0",
     "@softwareventures/tslint-rules": "0.6.4",
+    "cz-conventional-changelog": "2.1.0",
     "tslint": "5.12.1",
     "typescript": "3.2.4"
   },
@@ -31,5 +32,10 @@
     "@types/escape-string-regexp": "^1.0.0",
     "escape-string-regexp": "^1.0.5",
     "tslib": "^1.9.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
