--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "sideEffects": false,
   "devDependencies": {
+    "@softwareventures/semantic-release-config": "1.1.1",
     "@softwareventures/tsconfig": "2.3.3",
     "@softwareventures/tslint-rules": "0.9.1",
     "cz-conventional-changelog": "3.3.0",
@@ -38,5 +39,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "release": {
+    "extends": "@softwareventures/semantic-release-config"
   }
 }
