--- a/package.json
+++ b/package.json
@@ -2,24 +2,30 @@
   "name": "@softwareventures/csv",
   "version": "0.1.5-development",
   "description": "Parser and serializer for CSV and related formats",
-  "repository": "github:softwareventures/csv",
   "keywords": [
+    "TypeScript",
     "csv",
-    "tsv",
-    "TypeScript"
+    "tsv"
   ],
   "author": "Daniel Cassidy <mail@danielcassidy.me.uk>",
-  "license": "ISC",
+  "homepage": "https://github.com/softwareventures/csv",
   "bugs": {
     "url": "https://github.com/softwareventures/csv/issues"
   },
-  "homepage": "https://github.com/softwareventures/csv",
+  "repository": "github:softwareventures/csv",
+  "license": "ISC",
   "scripts": {
     "prepare": "tslint --project . && tsc",
-    "test": "echo No tests yet",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "test": "echo No tests yet"
   },
   "sideEffects": false,
+  "dependencies": {
+    "@softwareventures/array": "^0.31.0 || ^0.33.0 || ^3.0.0",
+    "@softwareventures/table": "^0.1.2",
+    "escape-string-regexp": "^4.0.0",
+    "tslib": "^1.9.3 || ^2.0.0"
+  },
   "devDependencies": {
     "@softwareventures/semantic-release-config": "1.1.2",
     "@softwareventures/tsconfig": "2.3.3",
@@ -28,12 +34,6 @@
     "semantic-release": "17.4.4",
     "tslint": "6.1.3",
     "typescript": "4.3.5"
-  },
-  "dependencies": {
-    "@softwareventures/array": "^0.31.0 || ^0.33.0 || ^3.0.0",
-    "@softwareventures/table": "^0.1.2",
-    "escape-string-regexp": "^4.0.0",
-    "tslib": "^1.9.3 || ^2.0.0"
   },
   "config": {
     "commitizen": {
