--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test": "echo No tests yet"
   },
   "sideEffects": false,
+  "engines": {
+    "node": "^12 || ^14 || >=16"
+  },
   "dependencies": {
     "@softwareventures/array": "^0.31.0 || ^0.33.0 || ^3.0.0",
     "@softwareventures/table": "^0.1.2",
