--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "repository": "github:softwareventures/csv",
   "license": "ISC",
   "scripts": {
+    "fix": "tsc --noEmit && tslint --fix --project .",
     "lint": "tsc --noEmit && tslint --project .",
     "prepare": "tslint --project . && tsc",
     "semantic-release": "semantic-release",
