--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "repository": "github:softwareventures/csv",
   "license": "ISC",
   "scripts": {
-    "fix": "tsc --noEmit && tslint --fix --project .",
-    "lint": "tsc --noEmit && tslint --project .",
-    "prepare": "tslint --project . && tsc",
+    "fix": "tsc --noEmit && eslint . --fix && prettier --write .",
+    "lint": "tsc --noEmit && eslint . && prettier --check .",
+    "prepare": "tsc",
     "semantic-release": "semantic-release",
     "test": "echo No tests yet"
   },
@@ -27,19 +27,26 @@
   },
   "dependencies": {
     "@softwareventures/array": "^0.31.0 || ^0.33.0 || ^3.0.0 || ^4.0.0 || ^5.0.0",
+    "@softwareventures/eslint-config": "^5.1.5",
+    "@softwareventures/prettier-config": "^3.0.0",
     "@softwareventures/table": "^0.1.2 || ^1.0.0",
     "escape-string-regexp": "^4.0.0",
+    "eslint": "^8.14.0",
+    "prettier": "^2.6.2",
     "tslib": "^1.9.3 || ^2.0.0 || ^2.1.0"
   },
   "devDependencies": {
     "@softwareventures/semantic-release-config": "2.0.3",
     "@softwareventures/tsconfig": "6.0.0",
-    "@softwareventures/tslint-rules": "1.0.0",
     "cz-conventional-changelog": "3.3.0",
     "semantic-release": "17.4.7",
-    "tslint": "6.1.3",
     "typescript": "4.8.4"
   },
+  "eslintConfig": {
+    "root": true,
+    "extends": "@softwareventures"
+  },
+  "prettier": "@softwareventures/prettier-config",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
