--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@softwareventures/array": "^0.31.0 || ^0.33.0 || ^3.0.0 || ^4.0.0 || ^5.0.0",
-    "@softwareventures/eslint-config": "^5.1.5",
+    "@softwareventures/eslint-config": "7.0.1",
     "@softwareventures/prettier-config": "^3.0.0",
     "@softwareventures/table": "^0.1.2 || ^1.0.0",
     "escape-string-regexp": "^4.0.0",
@@ -38,7 +38,14 @@
   "devDependencies": {
     "@softwareventures/semantic-release-config": "2.0.3",
     "@softwareventures/tsconfig": "6.0.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
     "cz-conventional-changelog": "3.3.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsdoc": "39.6.2",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-sonarjs": "0.16.0",
     "semantic-release": "17.4.7",
     "typescript": "4.8.4"
   },
